src/test/ui/pattern/bindings-after-at/borrowck-pat-ref-mut-and-ref.stderr
error: cannot borrow value as immutable because it is also borrowed as mutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:10:9
   |
LL |         ref mut z @ &mut Some(ref a) => {
   |         ---------^^^^^^^^^^^^^-----^
   |         |                     |
   |         |                     immutable borrow, by `a`, occurs here
   |         mutable borrow, by `z`, occurs here

error: cannot borrow value as mutable more than once at a time
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:34:9
   |
LL |     let ref mut a @ (ref b @ ref mut c) = u(); // sub-in-sub
   |         ---------^^^^-----------------^
   |         |            |       |
   |         |            |       another mutable borrow, by `c`, occurs here
   |         |            also borrowed as immutable, by `b`, here
   |         first mutable borrow, by `a`, occurs here

error: cannot borrow value as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:34:22
   |
LL |     let ref mut a @ (ref b @ ref mut c) = u(); // sub-in-sub
   |                      -----^^^---------
   |                      |       |
   |                      |       mutable borrow, by `c`, occurs here
   |                      immutable borrow, by `b`, occurs here

error: cannot borrow value as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:38:9
   |
LL |     let ref a @ ref mut b = U;
   |         -----^^^---------
   |         |       |
   |         |       mutable borrow, by `b`, occurs here
   |         immutable borrow, by `a`, occurs here

error: cannot borrow value as immutable because it is also borrowed as mutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:40:9
   |
LL |     let ref mut a @ ref b = U;
   |         ---------^^^-----
   |         |           |
   |         |           immutable borrow, by `b`, occurs here
   |         mutable borrow, by `a`, occurs here

error: cannot borrow value as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:42:9
   |
LL |     let ref a @ (ref mut b, ref mut c) = (U, U);
   |         -----^^^^---------^^---------^
   |         |        |          |
   |         |        |          mutable borrow, by `c`, occurs here
   |         |        mutable borrow, by `b`, occurs here
   |         immutable borrow, by `a`, occurs here

error: cannot borrow value as immutable because it is also borrowed as mutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:44:9
   |
LL |     let ref mut a @ (ref b, ref c) = (U, U);
   |         ---------^^^^-----^^-----^
   |         |            |      |
   |         |            |      immutable borrow, by `c`, occurs here
   |         |            immutable borrow, by `b`, occurs here
   |         mutable borrow, by `a`, occurs here

error: cannot borrow value as immutable because it is also borrowed as mutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:47:9
   |
LL |     let ref mut a @ ref b = u();
   |         ---------^^^-----
   |         |           |
   |         |           immutable borrow, by `b`, occurs here
   |         mutable borrow, by `a`, occurs here

error: cannot borrow value as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:52:9
   |
LL |     let ref a @ ref mut b = u();
   |         -----^^^---------
   |         |       |
   |         |       mutable borrow, by `b`, occurs here
   |         immutable borrow, by `a`, occurs here

error: cannot borrow value as immutable because it is also borrowed as mutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:58:9
   |
LL |     let ref mut a @ ref b = U;
   |         ---------^^^-----
   |         |           |
   |         |           immutable borrow, by `b`, occurs here
   |         mutable borrow, by `a`, occurs here

error: cannot borrow value as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:62:9
   |
LL |     let ref a @ ref mut b = U;
   |         -----^^^---------
   |         |       |
   |         |       mutable borrow, by `b`, occurs here
   |         immutable borrow, by `a`, occurs here

error: cannot borrow value as immutable because it is also borrowed as mutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:68:9
   |
LL |         ref mut a @ Ok(ref b) | ref mut a @ Err(ref b) => {
   |         ---------^^^^^^-----^
   |         |              |
   |         |              immutable borrow, by `b`, occurs here
   |         mutable borrow, by `a`, occurs here

error: cannot borrow value as immutable because it is also borrowed as mutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:68:33
   |
LL |         ref mut a @ Ok(ref b) | ref mut a @ Err(ref b) => {
   |                                 ---------^^^^^^^-----^
   |                                 |               |
   |                                 |               immutable borrow, by `b`, occurs here
   |                                 mutable borrow, by `a`, occurs here

error: cannot borrow value as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:77:9
   |
LL |         ref a @ Ok(ref mut b) | ref a @ Err(ref mut b) => {
   |         -----^^^^^^---------^
   |         |          |
   |         |          mutable borrow, by `b`, occurs here
   |         immutable borrow, by `a`, occurs here

error: cannot borrow value as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:77:33
   |
LL |         ref a @ Ok(ref mut b) | ref a @ Err(ref mut b) => {
   |                                 -----^^^^^^^---------^
   |                                 |           |
   |                                 |           mutable borrow, by `b`, occurs here
   |                                 immutable borrow, by `a`, occurs here

error: cannot borrow value as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:88:9
   |
LL |         ref a @ Ok(ref mut b) | ref a @ Err(ref mut b) if { *b = U; false } => {}
   |         -----^^^^^^---------^
   |         |          |
   |         |          mutable borrow, by `b`, occurs here
   |         immutable borrow, by `a`, occurs here

error: cannot borrow value as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:88:33
   |
LL |         ref a @ Ok(ref mut b) | ref a @ Err(ref mut b) if { *b = U; false } => {}
   |                                 -----^^^^^^^---------^
   |                                 |           |
   |                                 |           mutable borrow, by `b`, occurs here
   |                                 immutable borrow, by `a`, occurs here

error: cannot borrow value as immutable because it is also borrowed as mutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:95:9
   |
LL |         ref mut a @ Ok(ref b) | ref mut a @ Err(ref b) if { *a = Err(U); false } => {}
   |         ---------^^^^^^-----^
   |         |              |
   |         |              immutable borrow, by `b`, occurs here
   |         mutable borrow, by `a`, occurs here

error: cannot borrow value as immutable because it is also borrowed as mutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:95:33
   |
LL |         ref mut a @ Ok(ref b) | ref mut a @ Err(ref b) if { *a = Err(U); false } => {}
   |                                 ---------^^^^^^^-----^
   |                                 |               |
   |                                 |               immutable borrow, by `b`, occurs here
   |                                 mutable borrow, by `a`, occurs here

error: cannot borrow value as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:102:9
   |
LL |         ref a @ Ok(ref mut b) | ref a @ Err(ref mut b) if { drop(b); false } => {}
   |         -----^^^^^^---------^
   |         |          |
   |         |          mutable borrow, by `b`, occurs here
   |         immutable borrow, by `a`, occurs here

error: cannot borrow value as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:102:33
   |
LL |         ref a @ Ok(ref mut b) | ref a @ Err(ref mut b) if { drop(b); false } => {}
   |                                 -----^^^^^^^---------^
   |                                 |           |
   |                                 |           mutable borrow, by `b`, occurs here
   |                                 immutable borrow, by `a`, occurs here

error: cannot borrow value as immutable because it is also borrowed as mutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:110:9
   |
LL |         ref mut a @ Ok(ref b) | ref mut a @ Err(ref b) if { drop(a); false } => {}
   |         ---------^^^^^^-----^
   |         |              |
   |         |              immutable borrow, by `b`, occurs here
   |         mutable borrow, by `a`, occurs here

error: cannot borrow value as immutable because it is also borrowed as mutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:110:33
   |
LL |         ref mut a @ Ok(ref b) | ref mut a @ Err(ref b) if { drop(a); false } => {}
   |                                 ---------^^^^^^^-----^
   |                                 |               |
   |                                 |               immutable borrow, by `b`, occurs here
   |                                 mutable borrow, by `a`, occurs here

error: cannot borrow value as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:118:9
   |
LL |     let ref a @ (ref mut b, ref mut c) = (U, U);
   |         -----^^^^---------^^---------^
   |         |        |          |
   |         |        |          mutable borrow, by `c`, occurs here
   |         |        mutable borrow, by `b`, occurs here
   |         immutable borrow, by `a`, occurs here

error: cannot borrow value as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:123:9
   |
LL |     let ref a @ (ref mut b, ref mut c) = (U, U);
   |         -----^^^^---------^^---------^
   |         |        |          |
   |         |        |          mutable borrow, by `c`, occurs here
   |         |        mutable borrow, by `b`, occurs here
   |         immutable borrow, by `a`, occurs here

error: cannot borrow value as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:130:9
   |
LL |     let ref a @ (ref mut b, ref mut c) = (U, U);
   |         -----^^^^---------^^---------^
   |         |        |          |
   |         |        |          mutable borrow, by `c`, occurs here
   |         |        mutable borrow, by `b`, occurs here
   |         immutable borrow, by `a`, occurs here

error: cannot borrow value as immutable because it is also borrowed as mutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:135:9
   |
LL |     let ref mut a @ (ref b, ref c) = (U, U);
   |         ---------^^^^-----^^-----^
   |         |            |      |
   |         |            |      immutable borrow, by `c`, occurs here
   |         |            immutable borrow, by `b`, occurs here
   |         mutable borrow, by `a`, occurs here

error: cannot borrow value as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:24:11
   |
LL |     fn f1(ref a @ ref mut b: U) {}
   |           -----^^^---------
   |           |       |
   |           |       mutable borrow, by `b`, occurs here
   |           immutable borrow, by `a`, occurs here

error: cannot borrow value as immutable because it is also borrowed as mutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:26:11
   |
LL |     fn f2(ref mut a @ ref b: U) {}
   |           ---------^^^-----
   |           |           |
   |           |           immutable borrow, by `b`, occurs here
   |           mutable borrow, by `a`, occurs here

error: cannot borrow value as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:28:11
   |
LL |     fn f3(ref a @ [ref b, ref mut mid @ .., ref c]: [U; 4]) {}
   |           -----^^^^^^^^^^^----------------^^^^^^^^
   |           |               |
   |           |               mutable borrow, by `mid`, occurs here
   |           immutable borrow, by `a`, occurs here

error: cannot borrow value as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:30:22
   |
LL |     fn f4_also_moved(ref a @ ref mut b @ c: U) {}
   |                      -----^^^-------------
   |                      |       |           |
   |                      |       |           also moved into `c` here
   |                      |       mutable borrow, by `b`, occurs here
   |                      immutable borrow, by `a`, occurs here

error: cannot move out of value because it is borrowed
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:30:30
   |
LL |     fn f4_also_moved(ref a @ ref mut b @ c: U) {}
   |                              ---------^^^-
   |                              |           |
   |                              |           value moved into `c` here
   |                              value borrowed, by `b`, here

error[E0502]: cannot borrow value as immutable because it is also borrowed as mutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:10:31
   |
LL |         ref mut z @ &mut Some(ref a) => {
   |         ----------------------^^^^^-
   |         |                     |
   |         |                     immutable borrow occurs here
   |         mutable borrow occurs here
...
LL |             **z = None;
   |             ---------- mutable borrow later used here

error[E0502]: cannot borrow value as immutable because it is also borrowed as mutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:47:21
   |
LL |     let ref mut a @ ref b = u();
   |         ------------^^^^^
   |         |           |
   |         |           immutable borrow occurs here
   |         mutable borrow occurs here
...
LL |     *a = u();
   |     -------- mutable borrow later used here

error[E0502]: cannot borrow value as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:52:17
   |
LL |     let ref a @ ref mut b = u();
   |         --------^^^^^^^^^
   |         |       |
   |         |       mutable borrow occurs here
   |         immutable borrow occurs here
...
LL |     drop(a);
   |          - immutable borrow later used here

error[E0502]: cannot borrow value as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:77:20
   |
LL |         ref a @ Ok(ref mut b) | ref a @ Err(ref mut b) => {
   |         -----------^^^^^^^^^-
   |         |          |
   |         |          mutable borrow occurs here
   |         immutable borrow occurs here
...
LL |             drop(a);
   |                  - immutable borrow later used here

error[E0502]: cannot borrow value as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:77:45
   |
LL |         ref a @ Ok(ref mut b) | ref a @ Err(ref mut b) => {
   |                                 ------------^^^^^^^^^-
   |                                 |           |
   |                                 |           mutable borrow occurs here
   |                                 immutable borrow occurs here
...
LL |             drop(a);
   |                  - immutable borrow later used here

error[E0594]: cannot assign to `*b`, as it is immutable for the pattern guard
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:88:61
   |
LL |         ref a @ Ok(ref mut b) | ref a @ Err(ref mut b) if { *b = U; false } => {}
   |                                                             ^^^^^^ cannot assign
   |
   = note: variables bound in patterns are immutable until the end of the pattern guard

error[E0594]: cannot assign to `*a`, as it is immutable for the pattern guard
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:95:61
   |
LL |         ref mut a @ Ok(ref b) | ref mut a @ Err(ref b) if { *a = Err(U); false } => {}
   |                                                             ^^^^^^^^^^^ cannot assign
   |
   = note: variables bound in patterns are immutable until the end of the pattern guard

error[E0507]: cannot move out of `b` in pattern guard
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:102:66
   |
LL |         ref a @ Ok(ref mut b) | ref a @ Err(ref mut b) if { drop(b); false } => {}
   |                                                                  ^ move occurs because `b` has type `&mut U`, which does not implement the `Copy` trait
   |
   = note: variables bound in patterns cannot be moved from until after the end of the pattern guard

error[E0507]: cannot move out of `b` in pattern guard
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:102:66
   |
LL |         ref a @ Ok(ref mut b) | ref a @ Err(ref mut b) if { drop(b); false } => {}
   |                                                                  ^ move occurs because `b` has type `&mut U`, which does not implement the `Copy` trait
   |
   = note: variables bound in patterns cannot be moved from until after the end of the pattern guard

error[E0507]: cannot move out of `a` in pattern guard
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:110:66
   |
LL |         ref mut a @ Ok(ref b) | ref mut a @ Err(ref b) if { drop(a); false } => {}
   |                                                                  ^ move occurs because `a` has type `&mut std::result::Result<U, U>`, which does not implement the `Copy` trait
   |
   = note: variables bound in patterns cannot be moved from until after the end of the pattern guard

error[E0507]: cannot move out of `a` in pattern guard
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:110:66
   |
LL |         ref mut a @ Ok(ref b) | ref mut a @ Err(ref b) if { drop(a); false } => {}
   |                                                                  ^ move occurs because `a` has type `&mut std::result::Result<U, U>`, which does not implement the `Copy` trait
   |
   = note: variables bound in patterns cannot be moved from until after the end of the pattern guard

error[E0502]: cannot borrow value as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:123:18
   |
LL |     let ref a @ (ref mut b, ref mut c) = (U, U);
   |         ---------^^^^^^^^^------------
   |         |        |
   |         |        mutable borrow occurs here
   |         immutable borrow occurs here
...
LL |     drop(a);
   |          - immutable borrow later used here

error[E0502]: cannot borrow value as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:123:29
   |
LL |     let ref a @ (ref mut b, ref mut c) = (U, U);
   |         --------------------^^^^^^^^^-
   |         |                   |
   |         |                   mutable borrow occurs here
   |         immutable borrow occurs here
...
LL |     drop(a);
   |          - immutable borrow later used here

error[E0502]: cannot borrow value as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:130:18
   |
LL |     let ref a @ (ref mut b, ref mut c) = (U, U);
   |         ---------^^^^^^^^^------------
   |         |        |
   |         |        mutable borrow occurs here
   |         immutable borrow occurs here
...
LL |     drop(a);
   |          - immutable borrow later used here

error[E0502]: cannot borrow value as mutable because it is also borrowed as immutable
  --> $DIR/borrowck-pat-ref-mut-and-ref.rs:130:29
   |
LL |     let ref a @ (ref mut b, ref mut c) = (U, U);
   |         --------------------^^^^^^^^^-
   |         |                   |
   |         |                   mutable borrow occurs here
   |         immutable borrow occurs here
...
LL |     drop(a);
   |          - immutable borrow later used here

error: aborting due to 47 previous errors

Some errors have detailed explanations: E0502, E0507, E0594.
For more information about an error, try `rustc --explain E0502`.
